fixed project thumbnails clipping on mobile

--- a/style.css
+++ b/style.css
@@ -837,8 +837,16 @@ strong::first-letter {
 
     .project {
         margin: 5vw auto;
-        height: 70vh;
+        height: 100vh;
         width: 85vw;
+    }
+
+    .thumbnail {
+        height: 65%;
+    }
+
+    .repl {
+        height: 65%
     }
 
     .btn-2 {
